@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.52 2005/01/25 22:53:12 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.53 2005/01/27 01:48:48 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  26 Jan 2005; John Laliberte <allanonl@bu.edu>
+  ExtraPackages.py - major overhaul of the screen.  Uses objects for the
+  'Section' and 'Category'.
 
   24 Jan 2005; John Laliberte <allanonl@bu.edu>
   Networking.py - fixed the bug where if no device was entered, it would
